[tool.poetry]
name = "doompie"
version = "0.1.0"
description = ""
authors = ["Aleksandr Shpak <shpaker@gmail.com>"]
readme = "README.md"
repository = "https://github.com/shpaker/doompie"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pygame = "^2.1.2"
ursina = "^5.1.0"
pydantic = "^1.10.2"
screeninfo = "^0.8.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.991"
pylint = "^2.15.8"
flake8 = "^6.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
src_paths = ["doompie", "tests"]
skip = [".mypy_cache", ".pytest_cache", "venv"]

[tool.pylint.messages_control]
disable = "missing-docstring, no-member, too-few-public-methods, logging-fstring-interpolation"

[tool.pylint.format]
max-line-length = "79"
indent-string = "    "
good-names = "fh, id, i"

[tool.pylint.master]
ignore = "venv,tests"
indent-string = "    "
extension-pkg-whitelist = "pydantic"

[tool.black]
line-length = 79
verbose = 1
color = true
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
  )/
)
'''
